positional_derive/tests/ui/align-empty.stderr
error: wrong field configuration

         = help: align value should be 'left', 'right', 'l' or 'r'

 --> tests/ui/align-empty.rs:5:32
  |
5 |     #[field(size = 10, align = "")]
  |                                ^^
